<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardDetailsFragment">

    <TextView
        android:id="@+id/details_text_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_information"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/details_text_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/us_phones" />

    <TextView
        android:id="@+id/details_text_title_expiry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date" />

    <TextView
        android:id="@+id/details_text_expiry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/date/mmddyy" />

    <TextView
        android:id="@+id/details_text_holder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/full_names" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/dp_24"
        app:constraint_referenced_ids="details_text_header, details_text_card_number,
        details_text_title_expiry_date, details_text_expiry_date, details_text_holder_name"
        app:flow_verticalBias="0"
        app:flow_verticalGap="@dimen/dp_24"
        app:flow_verticalStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/details_button_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/details_button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/details_button_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow" />

    <Button
        android:id="@+id/details_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_button_update" />
</androidx.constraintlayout.widget.ConstraintLayout>
